src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_DuplicateContent.xaml
<TextBlock xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
    This is Text Content that is added via IAddChild.
    <TextBlock.Inlines>
       This is a second block of content that "should" not be allowed
    </TextBlock.Inlines>
</TextBlock>